post : 운영체제 - 멀티 프로세스와 멀티 스레드

--- a/_posts/2020-08-26-프로세스와 스레드.md
+++ b/_posts/2020-08-26-프로세스와 스레드.md
@@ -7,6 +7,7 @@ categories:
   - OS
 tags:
   - OS
+  - 운영체제
   - 프로세스
   - 스레드
   - Process
@@ -27,7 +28,7 @@ last_modified_at: 2020-08-26. 03:30:00
 
 - 실행할 수 있는 마리오 게임 (`mario.exe`)
 
-
+<br>
 
 ## 프로세스(Process)
 
@@ -63,7 +64,7 @@ last_modified_at: 2020-08-26. 03:30:00
 - 하나의 컴퓨터에 독립적으로 여러 마리오 게임을 실행 할 수 있다.
 - 프로세스는 개념적인 것이며, 실행되는 모든 작업들은 스레드가 처리하고 프로세스는 스레드의 모임이라고 할 수 있다.
 
-
+<br>
 
 ## 스레드(Thread)
 
@@ -97,7 +98,7 @@ last_modified_at: 2020-08-26. 03:30:00
 - 실행 중인 마리오 게임(프로세스)을 동작하기 위해 실행되는 일
 - 화면 출력, 사운드 출력, 통신, 조작 등 여러 스레드의 모임이 하나의 프로세스를 이룬다.
 
-
+<br>
 
 ## References
 
