post : HTTP 보안 취약점과 HTTPS

--- a/_posts/2020-08-30-TCP:IP.md
+++ b/_posts/2020-08-30-TCP:IP.md
@@ -1,6 +1,6 @@
 ---
-title:  "TCP/IP와 TCP/IP 4계층"
-excerpt: "TCP/IP와 네트워크 통신"
+title:  "TCP/IP와 계층구조"
+excerpt: "TCP/IP 4계층과 네트워크 통신"
 header:
 
 categories:
