post : SOLID 원칙 수정

--- a/_posts/2020-10-18-SOLID 원칙.md
+++ b/_posts/2020-10-18-SOLID 원칙.md
@@ -61,7 +61,7 @@ last_modified_at: 2020-10-18. 21:30:00
 
 ### ISP(Interface Segregation Principle, 인터페이스 분리 원칙)
 
-- 인터페이스는 범용적으로 구현하기보다 사용에 맞게끔 분리해서 설계해야 한다.
+- 인터페이스는 범용적으로 구현하기보다 사용에 맞도록 분리해서 설계해야 한다.
 - 인터페이스를 상속받은 하위 클래스에서 사용하지 않는 메서드가 생기면 안된다.
 - 여러 메서드가 포함된 하나의 범용적인 인터페이스보다는 여러개의 구체적인 인터페이스를 독립적으로 생성한다.
   - 다중 인터페이스 상속으로 복합하여 필요한 클래스를 구현 할 수 있다.
