fix : JPA 문서 제목 수정

--- a/_posts/2020-05-25-JPA #1 - 엔티티 설계와 주의사항.md
+++ b/_posts/2020-05-25-JPA #1 - 엔티티 설계와 주의사항.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 1"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #1"
+title:  "JPA #1 - 엔티티 설계와 주의사항"
+excerpt: "연관관계와 LazyLoading"
 header:
 
 categories:
@@ -45,7 +45,7 @@ last_modified_at: 2020-07-20 17:25:00
       org.hibernate.type: trace
   ```
 
-### 
+ 
 
 ## 도메인 분석 설계
 
@@ -105,12 +105,11 @@ last_modified_at: 2020-07-20 17:25:00
 
     ```java
     publlic class Order {
-    @OneToMany(mappedBy = 
-    "order", cascade = CascadeType.ALL)
+    	@OneToMany(mappedBy = "order", cascade = CascadeType.ALL)
       private List<OrderItem> orderItems = new ArrayList<>();
     }
     ```
-
+  
 - 연관관계 편의 메서드는 연관관계의 주인이 되는 쪽에 있으면 편하다.
 
   
