--- a/_posts/2020-06-03-JPA #5 - API 개발 기본.md
+++ b/_posts/2020-06-03-JPA #5 - API 개발 기본.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 5"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #5"
+title:  "JPA #5 - API 개발 기본"
+excerpt: "DTO 사용이유"
 header:
 
 categories:
@@ -34,7 +34,7 @@ last_modified_at: 2020-07-20 17:40:00
 - 엔티티는 외부에 노출하지 않는다.
 - API 스펙이 변경 될 위험이 없다.
 
-### 회언 수정 API
+### 회원 수정 API
 
 - P.K 기준으로 하나 조회하는 메서드의 경우 성능에 큰 영향을 끼치지 않기 때문에 유지보수 측면에서 커맨드와 쿼리를 분리해서 사용한다.
 
