--- a/_posts/2020-05-26-JPA #2 - 계층형 구조.md
+++ b/_posts/2020-05-26-JPA #2 - 계층형 구조.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 2"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #2"
+title:  "JPA #2 - 계층형 구조"
+excerpt: "계층형 구조 개발"
 header:
 
 categories:
