--- a/_posts/2020-05-27-JPA #3 - 도메인 모델 패턴.md
+++ b/_posts/2020-05-27-JPA #3 - 도메인 모델 패턴.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 3"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #3"
+title:  "JPA #3 - 도메인 모델 패턴"
+excerpt: "Cascade, Dirty Checking 그리고 동적쿼리"
 header:
 
 categories:
