--- a/_posts/2020-06-10-JPA #6 - 지연로딩과 조회 성능 최적화.md
+++ b/_posts/2020-06-10-JPA #6 - 지연로딩과 조회 성능 최적화.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 6"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #6"
+title:  "JPA #6 - 지연로딩과 조회 성능 최적화"
+excerpt: "프록시 객체, fetch join 최적화"
 header:
 
 categories:
