--- a/_posts/2020-06-19-JPA #7 - 컬렉션 조회 최적화 1.md
+++ b/_posts/2020-06-19-JPA #7 - 컬렉션 조회 최적화 1.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 7"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #7"
+title:  "JPA #7 - 컬렉션 조회 최적화 1"
+excerpt: "컬렉션 관계에서 fetch join의 단점"
 header:
 
 categories:
