--- a/_posts/2020-06-21-JPA #8 - 컬렉션 조회 최적화 2.md
+++ b/_posts/2020-06-21-JPA #8 - 컬렉션 조회 최적화 2.md
@@ -1,6 +1,6 @@
 ---
-title:  "JPA 학습정리 - 8"
-excerpt: "Spring Boot와 JPA 활용 학습정리 #8"
+title:  "JPA #8 - 컬렉션 조회 최적화 2"
+excerpt: "bach-size : 페이징과 한계돌파"
 header:
 
 categories:
