post : Update 삽질노트 - 개발환경

--- a/_posts/2021-07-28-삽질노트 - 개발환경.md
+++ b/_posts/2021-07-28-삽질노트 - 개발환경.md
@@ -7,7 +7,7 @@ categories:
   - Stack Overflow
 tags:
   - 
-last_modified_at: 2021-07-28. 16:30:00
+last_modified_at: 2021-09-08. 10:30:00
 
 ---
 
@@ -55,3 +55,42 @@ Caused by: java.lang.ClassNotFoundException: com.kakaopay.payment.service.admin.
 - IntelliJ IDEA / Preferences / Build, Execution, Deployment / Build Tools / Gradle 설정값 변경
 
 ![001](https://user-images.githubusercontent.com/58318041/127263691-b88ee12b-bb9a-4e0f-8479-10eb8a7ff053.png)
+
+## #2 jdk 설정
+
+### Issue
+
+- jdk-11.0.11.jdk 설정 후 build / run 에러
+- 특정 프로젝트에서는 정상 동작
+
+
+
+### Error Log
+
+```kotlin
+WARNING: /Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home/bin/java is loading libcrypto in an unsafe way
+```
+
+
+
+### Solution
+
+- adopt-openjdk-11 설치
+
+```
+# Users/{사용자}/Library가 아닌 절대경로인 /Library/Java/JavaVirtualMachines/ 경로에 설치된다.
+$ brew install --cask adoptopenjdk/openjdk/adoptopenjdk11
+$ java --version
+```
+
+- ~/.zshrc 경로에 환경변수 설정
+
+```
+# JDK version PATH
+export JAVA_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home
+export PATH=$JAVA_HOME/bin:$PATH
+```
+
+- project structure 경로에서 adopt-openjdk-11로 SDK 설정
+
+![image](https://user-images.githubusercontent.com/58318041/132431496-5ad2960a-933e-427d-82e3-303785605e8c.png)
