--- a/_posts/2021-07-28-이슈노트 - 개발환경.md
+++ b/_posts/2021-07-28-이슈노트 - 개발환경.md
@@ -21,6 +21,7 @@ last_modified_at: 2022-02-17. 16:30:00
 ### 개요
 - 개발환경 설정으로 발생하거나 해결되는 이슈에 대해 기록합니다.
 
+---
 
 ## #1 Build 설정
 
@@ -46,6 +47,8 @@ Caused by: java.lang.ClassNotFoundException: com.kakaopay.payment.service.admin.
 
 ![001](https://user-images.githubusercontent.com/58318041/127263691-b88ee12b-bb9a-4e0f-8479-10eb8a7ff053.png)
 
+---
+
 ## #2 jdk 설정
 
 ### Issue
@@ -59,6 +62,7 @@ WARNING: /Library/Java/JavaVirtualMachines/jdk-11.0.11.jdk/Contents/Home/bin/jav
 
 ### Solution
 - adopt-openjdk-11 설치
+
 ```
 # Users/{사용자}/Library가 아닌 절대경로인 /Library/Java/JavaVirtualMachines/ 경로에 설치된다.
 $ brew install --cask adoptopenjdk/openjdk/adoptopenjdk11
@@ -66,6 +70,7 @@ $ java --version
 ```
 
 - ~/.zshrc 경로에 환경변수 설정
+
 ```
 # JDK version PATH
 export JAVA_HOME=/Library/Java/JavaVirtualMachines/adoptopenjdk-11.jdk/Contents/Home
@@ -75,8 +80,10 @@ export PATH=$JAVA_HOME/bin:$PATH
 - project structure 경로에서 adopt-openjdk-11로 SDK 설정
 
 ![image](https://user-images.githubusercontent.com/58318041/132431496-5ad2960a-933e-427d-82e3-303785605e8c.png)
-  
-## #3 cache
+
+---
+
+## #3 cache 초기화
 
 ### Issue
 - 새로 생성한 Kotlin/Java 프로젝트에서 Logger 또는 Print 관련 클래스를 불러오지 못함
