update : 이슈노트 - 개발환경 이미지 버그로 경로 수정

--- a/_posts/2021-07-28-이슈노트 - 개발환경.md
+++ b/_posts/2021-07-28-이슈노트 - 개발환경.md
@@ -95,4 +95,4 @@ export PATH=$JAVA_HOME/bin:$PATH
 ### Solution
 - File > Invalidate Caches.. 경로에서 캐시 삭제 후 재시작
 
-![issue_note-001](images/issue_note-001.png)
+![issue_note-001]({{base_image_url}}/images/issue_note-001.png)
